--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -243,7 +243,9 @@ An OpenVASP Session knows four state changing operations:
 - Ending a Session, and
 - Aborting a Session.
 
-The reader is recommended to consult OVIP-7 to understand the session model in full detail. This section describes how a conformant *Node* must implement the four above listed state changing operations.
+In addition, the session layer defines *Application Messages* that are exchanged during an open session.
+
+The reader is recommended to consult OVIP-7 to understand the session model in full detail. This section describes how a conformant *Node* must implement the four above listed state changing operations as well as the exchange of *Application Messages*.
 
 ### 6.1. Initiating a Session
 
@@ -424,138 +426,217 @@ Send acknowledgement (see 5.6).
 
 ##### 6.2.2.3. Processing Steps
 
-1. Read 
+1. Read `connection`, `returnTopic` and `ovMessage` from the *Payload* of received *Envelope*.
 
-2. Update item in the set of *Connections*:</br>
+2. Look up respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values.
 
-   | Element         | Value                                                   |
-   | :-------------- | :------------------------------------------------------ |
-   | `outboundTopic` | `returnTopic` from the *Payload* of received *Envelope* |
+3. Update respective *Connection* item:</br>
+
+   | Element         | Value         |
+   | :-------------- | :------------ |
+   | `outboundTopic` | `returnTopic` |
 
    
 
-3. Make the *Node* listen to incoming *Envelopes* associated to this *Connection*.
+##### 6.2.2.4. Notification to Session Layer
 
-##### 6.1.2.4. Notification to Session Layer
-
-- Notify that session invitation has been received.
-- Provide *Connection* identifier (`connectionID`) so that the session layer can refer to it throughout the session lifecycle.
+- Notify that session invitation has been accepted.
 - Pass `ovMessage` to session layer.
 
+#### 6.2.3. Passive Node Sends Session Denial
 
+##### 6.2.3.1. Session Layer Input
 
+| Element          | Description             | See                 |
+| :--------------- | :---------------------- | :------------------ |
+| `connectionID`   | *Connection* identifier |                     |
+| `isAccepted`     | `False`                 |                     |
+| `sessionMessage` | Session Reply Message   | OVIP-7, section 4.2 |
 
+##### 6.2.3.2. Processing steps
 
+1. Create the *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
+   | Element       | Value            |
+   | :------------ | :--------------- |
+   | `instruction` | `011`            |
+   | `ovMessage`   | `sessionMessage` |
 
+   
 
+2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
+   | Element | Value / Specification                                        |
+   | :------ | :----------------------------------------------------------- |
+   | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
+   | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
 
+   
 
+3. Send Envelope created in step 2.
 
+4. Delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values.
 
-### 5.2. Responding to a Session Initiation (ACCEPT)
+##### 6.2.3.3. Feedback to Session Layer
 
-Sent by a *Passive Node* to an *Active Node* accepting the invitation for a *Connection*.
+- Return that session denial has been sent.
 
-Besides the general specifications given on *Envelope*, *Message* and *Payload* Level, the following data items must be set as specified.
+#### 6.2.4. Active Node Receives Session Denial
 
-#### 5.2.1. Envelope
+##### 6.2.4.1. Inbound Envelope Validation & Decryption
 
-| Element | Value / Specification                                        |
-| :------ | :----------------------------------------------------------- |
-| `Topic` | Topic A, received by INVITE *Envelope*                       |
-| `Data`  | Content encrypted (symmetric, AES GCM, `AESNonce` as nonce) with the shared key generated from the *Initiator's* ECDH public key (received by INVITE *Envelope*) and the *Responder's* own ECDH public key |
+Validate and decrypt *Envelope* (see 5.5).
 
-#### 5.2.2. Payload
+##### 6.2.4.3. Processing Steps
 
-| Element       | Length         | Value                                                   |
-| :------------ | :------------- | :------------------------------------------------------ |
-| `instruction` | 3 bits         | `010`                                                   |
-| `returnTopic` | 4 bytes        | Topic B, randomly set by *Passive Node*                 |
-| `ovMessage`   | arbitrary size | Encrypted OpenVASP Message as provided by higher layers |
+1. Read `connection` and `ovMessage` from the *Payload* of received *Envelope*.
+2. Delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values.
 
-### 5.3. DENY
+##### 6.2.4.4. Notification to Session Layer
 
-Sent by a *Passive Node* to an *Active Node* denying the invitation for a *Connection*.
+- Notify that session invitation has been denied.
+- Pass `ovMessage` to session layer.
 
-Besides the general specifications given on *Envelope*, *Message* and *Payload* Level, the following data items must be set as specified.
+### 6.3. Ending or Aborting a Session
 
-#### 5.3.1. Envelope
+On the level of *Node* *Connections*, terminating a session (see OVIP-7, 4.3) or aborting a session (see OVIP-7, 4.4) are implemented the same.
 
-| Element | Value / Specification                                        |
-| :------ | :----------------------------------------------------------- |
-| `Topic` | Topic A, received by INVITE *Envelope*                       |
-| `Data`  | Content encrypted (symmetric, AES GCM, `AESNonce` as nonce) with the shared key generated from the *Initiator's* ECDH public key (received by INVITE *Envelope*) and the *Responder's* own ECDH public key |
+#### 6.3.1. Node Sends Session Termination or Abort
 
-#### 5.3.2. Payload
+##### 6.3.1.1. Session Layer Input
 
-| Element       | Length         | Value                                                   |
-| :------------ | :------------- | :------------------------------------------------------ |
-| `instruction` | 3 bits         | `011`                                                   |
-| `ovMessage`   | arbitrary size | Encrypted OpenVASP Message as provided by higher layers |
+| Element          | Description                                  | See                     |
+| :--------------- | :------------------------------------------- | :---------------------- |
+| `connectionID`   | *Connection* identifier                      |                         |
+| `sessionMessage` | Termination Message or Session Abort Message | OVIP-7, section 4.3/4.4 |
 
-### 5.4. UPDATE
+##### 6.3.1.2. Processing steps
 
-Sent by an *Active Node* or a *Passive Node* to transmit a *Message* over a *Connection*.
+1. Create the *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
 
-Besides the general specifications given on *Envelope*, *Message* and *Payload* Level, the following data items must be set as specified.
+   | Element       | Value            |
+   | :------------ | :--------------- |
+   | `instruction` | `101`            |
+   | `ovMessage`   | `sessionMessage` |
 
-#### 5.4.1. Envelope
+   
 
-| Element | Value / Specification                                        |
-| :------ | :----------------------------------------------------------- |
-| `Topic` | Topic B (if sent by *Active Node*) or Topic A (if sent by *Passive Node*) |
-| `Data`  | Content encrypted (symmetric, AES GCM, `AESNonce` as nonce) with the shared key |
+2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
-#### 5.4.2. Payload
+   | Element | Value / Specification                                        |
+   | :------ | :----------------------------------------------------------- |
+   | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
+   | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
 
-| Element       | Length         | Value                                                   |
-| :------------ | :------------- | :------------------------------------------------------ |
-| `instruction` | 3 bits         | `100`                                                   |
-| `ovMessage`   | arbitrary size | Encrypted OpenVASP Message as provided by higher layers |
+   
 
-### 5.5. CLOSE
+3. Add item to the Outbound *Envelope* Queue:</br>
 
-Sent by an *Active Node* or a *Passive Node* to close a *Connection*.
+   | Element      | Value                               |
+   | :----------- | :---------------------------------- |
+   | `envelopeID` | *Envelope* identifier set in step 1 |
+   | `envelope`   | *Envelope* created in step 2        |
+   | `expiry`     | Current time + 900 seconds          |
+   | `resends`    | `0`                                 |
+   | `connection` | `connectionID`                      |
 
-Besides the general specifications given on *Envelope*, *Message* and *Payload* Level, the following data items must be set as specified.
+   
 
-#### 5.5.1. Envelope
+4. Send Envelope created in step 2.
 
-| Element | Value / Specification                                        |
-| :------ |:----------------------------------------------------------- |
-| `Topic` | Topic B (if sent by *Active Node*) or Topic A (if sent by *Passive Node*) |
-| `Data`  | Content encrypted (symmetric, AES GCM, `AESNonce` as nonce) with the shared key |
+5. Delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values.
 
-#### 5.5.2. Payload
+##### 6.3.1.3. Feedback to Session Layer
 
-| Element       | Length         | Value                                                   |
-| :------------ | :------------- | :------------------------------------------------------ |
-| `instruction` | 3 bits         | `101`                                                   |
-| `ovMessage`   | arbitrary size | Encrypted OpenVASP Message as provided by higher layers |
+- Return that session termination or session abort has been sent.
 
-### 5.6. ACK
+#### 6.3.2. Node Receives Session Termination or Abort
 
-Sent by an *Active Node* or a *Passive Node* to acknowledge the receipt of a *Message* sent over a *Connection*.
+##### 6.3.2.1. Inbound Envelope Validation & Decryption
 
-Besides the general specifications given on *Envelope*, *Message* and *Payload* Level, the following data items must be set as specified.
+Validate and decrypt *Envelope* (see 5.5).
 
-#### 5.6.1. Envelope
+##### 6.3.2.2. Acknowledge Envelope Receipt
 
-| Element | Value / Specification                                        |
-| :------ | :----------------------------------------------------------- |
-| `Topic` | Topic B (if sent by *Active Node*) or Topic A (if sent by *Passive Node*) |
-| `Data`  | Content encrypted (symmetric, AES GCM, `AESNonce` as nonce) with the shared key |
+Send acknowledgement (see 5.6).
 
-#### 5.6.2. Payload
+##### 6.3.2.3. Processing Steps
 
-| Element       | Length  | Value                                             |
-| :------------ | :------ | :------------------------------------------------ |
-| `instruction` | 3 bits  | `000`                                             |
-| `envelopeACK` | 4 bytes | `envelope` value of *Envelope* to be acknowledged |
+1. Read `connection` and `ovMessage` from the *Payload* of received *Envelope*.
+2. Delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values.
 
+##### 6.3.2.4. Notification to Session Layer
 
+- Notify that session has been terminated or aborted.
+- Pass `ovMessage` to session layer.
+
+### 6.4. Sending Application Messages During a Session
+
+#### 6.4.1. Node Sends Application Message
+
+##### 6.4.1.1. Session Layer Input
+
+| Element          | Description             | See               |
+| :--------------- | :---------------------- | :---------------- |
+| `connectionID`   | *Connection* identifier |                   |
+| `sessionMessage` | *Application Message*   | OVIP-7, section 5 |
+
+##### 6.4.1.2. Processing steps
+
+1. Create the *Payload* out of the elements defined in 4.1 and the specified values in the table below.</br>
+
+   | Element       | Value            |
+   | :------------ | :--------------- |
+   | `instruction` | `100`            |
+   | `ovMessage`   | `sessionMessage` |
+
+   
+
+2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
+
+   | Element | Value / Specification                                        |
+   | :------ | :----------------------------------------------------------- |
+   | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
+   | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
+
+   
+
+3. Add item to the Outbound *Envelope* Queue:</br>
+
+   | Element      | Value                               |
+   | :----------- | :---------------------------------- |
+   | `envelopeID` | *Envelope* identifier set in step 1 |
+   | `envelope`   | *Envelope* created in step 2        |
+   | `expiry`     | Current time + 900 seconds          |
+   | `resends`    | `0`                                 |
+   | `connection` | `connectionID`                      |
+
+   
+
+4. Send Envelope created in step 2.
+
+##### 6.4.1.3. Feedback to Session Layer
+
+- Return that *Application Message* has been sent.
+
+#### 6.4.2. Node Receives Application Message
+
+##### 6.4.2.1. Inbound Envelope Validation & Decryption
+
+Validate and decrypt *Envelope* (see 5.5).
+
+##### 6.4.2.2. Acknowledge Envelope Receipt
+
+Send acknowledgement (see 5.6).
+
+##### 6.4.2.3. Processing Steps
+
+Read `connection` and `ovMessage` from the *Payload* of received *Envelope*.
+
+##### 6.4.2.4. Notification to Session Layer
+
+- Notify that *Application Message* has been received.
+- Pass `ovMessage` to session layer.
 
 # Motivation
 
