--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -80,7 +80,7 @@ The table below provides an overview about each of these elements and their usag
 Upon receipt of an *Envelope*, if the node detects a known topic, it tries to decrypt the `Data` element with the corresponding symmetric or asymmetric key. If decryption is successful, the *Message* is revealed with the following structure:
 
 | Element     | Description                           | OpenVASP Usage               | See  |
-| :---------- | :------------------------------------ | :--------------------------- | ---- |
+| :---------- | :------------------------------------ | :--------------------------- | :--- |
 | `flags`     | Flags to specifiy *Payload* structure | As per Whisper default       |      |
 | `padding`   | Random padding data, optional         | As per Whisper default       |      |
 | `payload`   | Message *Payload*                     | OpenVASP *Payload* structure | 4.1. |
@@ -107,21 +107,21 @@ The table below shows the structure of the OpenVASP *Payload*. The last four ele
 
 The `instruction` element can have the following values:
 
-| Value | Sent by                    | Description                                        | Used in |
-| :---- | :------------------------- | :------------------------------------------------- | :------ |
-| `000` | *Active* or *Passive Node* | Acknowledge *Envelope* receipt (ACK)               | 5.6     |
-| `001` | *Active Node*              | Inviting for a *Connection* (INVITE)               | 6.1     |
-| `010` | *Passive Node*             | Accepting a *Connection* invitation (ACCEPT)       | 6.2     |
-| `011` | *Passive Node*             | Denying a *Connection* invitation (DENY)           | 6.3     |
-| `100` | *Active* or *Passive Node* | Sending an *Envelope* over a *Connection* (UPDATE) | 6.4     |
-| `101` | *Active* or *Passive Node* | Closing a *Connection* (CLOSE)                     | 6.5     |
+| Value | Sent by                    | Description                                        |
+| :---- | :------------------------- | :------------------------------------------------- |
+| `000` | *Active* or *Passive Node* | Acknowledge *Envelope* receipt (ACK)               |
+| `001` | *Active Node*              | Inviting for a *Connection* (INVITE)               |
+| `010` | *Passive Node*             | Accepting a *Connection* invitation (ACCEPT)       |
+| `011` | *Passive Node*             | Denying a *Connection* invitation (DENY)           |
+| `100` | *Active* or *Passive Node* | Sending an *Envelope* over a *Connection* (UPDATE) |
+| `101` | *Active* or *Passive Node* | Closing a *Connection* (CLOSE)                     |
 
 #### 4.1.2. Acknowledgment
 
 *Nodes* must acknowledge the receipt of certain *Envelopes* by returning an OpenVASP *Envelope* of type ACK. The table below shows which Envelopes must be acknowledged.
 
 | To be acknowledged | Envelopes with `instruction` value (see 4.1.1) |
-| ------------------ | ---------------------------------------------- |
+| :----------------- | :--------------------------------------------- |
 | YES                | INVITE, ACCEPT, UPDATE, CLOSE                  |
 | NO                 | DENY, ACK                                      |
 
@@ -218,7 +218,7 @@ If required, the *Envelope* is acknowledged as per following steps.
 3. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
    | Element | Value / Specification                                        |
-   | ------- | ------------------------------------------------------------ |
+   | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection` values. |
    | `Data`  | *Message* inclusing *Payload* created in step 2, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection` values. |
 
@@ -285,7 +285,7 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
 9. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below.</br>
 
    | Element | Value / Specification                                        |
-   | ------- | ------------------------------------------------------------ |
+   | :------ | :----------------------------------------------------------- |
    | `Topic` | `receiver`                                                   |
    | `Data`  | *Message* inclusing *Payload* created in step 6, asymmetrically encrypted with the `transportKey` using SECP-256k1 as per Whisper standard. |
 
@@ -390,7 +390,7 @@ Send acknowledgement (see 5.6).
 2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
    | Element | Value / Specification                                        |
-   | ------- | ------------------------------------------------------------ |
+   | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
    | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
 
