--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -213,17 +213,13 @@ If required, the *Envelope* is acknowledged as per following steps.
    | `connection`  | `connection` value from the *Payload* of the *Envelope* to be acknowledged |
    | `envelopeACK` | `envelopeID` value from the *Payload* of the *Envelope* to be acknowledged |
 
-   
-
 3. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection` values. |
    | `Data`  | *Message* inclusing *Payload* created in step 2, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection` values. |
-
    
-
 4. Send Envelope created in step 3.
 
 ### 5.7. Processing Acknowledgements for Sent Envelopes
@@ -280,16 +276,12 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
    | `ecdhPK`      | `ecdhPublic`           |
    | `ovMessage`   | `sessionMessage`       |
 
-   
-
 9. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below.</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
    | `Topic` | `receiver`                                                   |
    | `Data`  | *Message* inclusing *Payload* created in step 6, asymmetrically encrypted with the `transportKey` using SECP-256k1 as per Whisper standard. |
-
-   
 
 8. Add item to the set of *Connections*:</br>
 
@@ -301,8 +293,6 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
    | `outboundTopic` | (empty)                |
    | `key`           | `sharedKey`            |
 
-
-
 9. Add item to the Outbound *Envelope* Queue:</br>
 
    | Element      | Value                               |
@@ -312,9 +302,7 @@ The reader is recommended to consult OVIP-7 to understand the session model in f
    | `expiry`     | Current time + 900 seconds          |
    | `resends`    | `0`                                 |
    | `connection` | `connectionIdentifier`              |
-
    
-
 10. Make the *Node* listen to incoming *Envelopes* associated to this *Connection*.
 
 11. Send *Envelope* created in step 7.
@@ -384,17 +372,13 @@ Send acknowledgement (see 5.6).
    | `instruction` | `010`                                                        |
    | `returnTopic` | `inboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
    | `ovMessage`   | `sessionMessage`                                             |
-
    
-
 2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
    | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
-
-   
 
 3. Add item to the Outbound *Envelope* Queue:</br>
 
@@ -405,8 +389,6 @@ Send acknowledgement (see 5.6).
    | `expiry`     | Current time + 900 seconds          |
    | `resends`    | `0`                                 |
    | `connection` | `connectionID`                      |
-
-   
 
 4. Send Envelope created in step 2.
 
@@ -436,8 +418,6 @@ Send acknowledgement (see 5.6).
    | :-------------- | :------------ |
    | `outboundTopic` | `returnTopic` |
 
-   
-
 ##### 6.2.2.4. Notification to Session Layer
 
 - Notify that session invitation has been accepted.
@@ -462,16 +442,12 @@ Send acknowledgement (see 5.6).
    | `instruction` | `011`            |
    | `ovMessage`   | `sessionMessage` |
 
-   
-
 2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
    | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
-
-   
 
 3. Send Envelope created in step 2.
 
@@ -519,16 +495,12 @@ On the level of *Node* *Connections*, terminating a session (see OVIP-7, 4.3) or
    | `instruction` | `101`            |
    | `ovMessage`   | `sessionMessage` |
 
-   
-
 2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
    | Element | Value / Specification                                        |
    | :------ | :----------------------------------------------------------- |
    | `Topic` | `outboundTopic` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
    | `Data`  | *Message* inclusing *Payload* created in step 1, symmetrically encrypted (AES GCM algorithm as per Whisper standard) with `key` value looked up in the *Connection* set based on matching `connection`/`connectionID` values. |
-
-   
 
 3. Add item to the Outbound *Envelope* Queue:</br>
 
@@ -588,8 +560,6 @@ Send acknowledgement (see 5.6).
    | `instruction` | `100`            |
    | `ovMessage`   | `sessionMessage` |
 
-   
-
 2. Create *Envelope* out of the elements defined in sections 4. and 3. and the specified values in the table below</br>
 
    | Element | Value / Specification                                        |
@@ -634,13 +604,13 @@ Read `connection` and `ovMessage` from the *Payload* of received *Envelope*.
 
 # Motivation
 
-**Alignment with new layer model** -- Text.
+**Transport layer reliability** -- The original specification as per White Paper was amended by introducing acknowledgements in response to community feedback.
+
+**Alignment with new layer model** -- A better separation between the different layers of OpenVASP was introduced by OVIP-9. This OVIP realigns the specification for using Whisper as transport layer with the new layer model.
 
 # Rationale
 
-**Transport layer reliability** -- Text.
-
-**New transportKey** -- Text.
+**Separate encryption on transport layer** -- Separating encryption on transport and session layers will allow for a better security architecture as the internet-facing Whisper could be decoupled from the server handling the sessions. Further, it allows the usage of a Whisper node by different session handlers without giving access to session layers details, particularly originator/beneficiary data.
 
 # Backwards Compatibility
 
