--- a/README.mediawiki
+++ b/README.mediawiki
@@ -54,6 +54,13 @@ We thank the Bitcoin community for introducing this process to handle standard i
 | Felix Laufenberg
 | Standard
 | Proposal
+|-
+| [[ovip-0010.md|10]]
+|
+| Whisper as Transport Layer
+| David Riegelnig
+| Standard
+| Proposal
 |}
 
 <!-- IMPORTANT!  See the instructions at the top of this page, do NOT JUST add OVIPs here! -->
