ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -37,7 +37,7 @@ The Index Contract serves as a universal smart contract factory and is deployed 
 ### Functions
 
 ```pseudocode
-createVaspContract(owner:address, vaspCode:bytes8): address {public}
+createVaspContract(owner:address, vaspCode:bytes8): address {public}
 ```
 
 **Description:**  
@@ -72,7 +72,7 @@ Called to get the VASP Code which is uniquely mapped to a given VASP Contract ad
 
 ## VASP Contract
 
-Each VASP participating in the OpenVASP protocol deploys and owns a dedicated VASP Contract. It is used to provide the public keys required to decrypt and verify protocol messages that were signed and sent by the VASP.
+Each VASP participating in the OpenVASP protocol deploys and owns a dedicated VASP Contract. It is used to provide the public keys required to decrypt and verify protocol messages that were signed and sent by the VASP. In addition, 
 
 VASP Contracts can only be deployed together with a unique VASP Code and via the Index Contract, which keeps track of all deployed VASP Contracts and their respective VASP Code. Each VASP Contract can always be retrieved from the Index Contract by the associated VASP Code.
 
@@ -81,16 +81,16 @@ The owner of the VASP Contract can change the public keys and can transfer owner
 ### State Variables
 
 ```pseudocode
-owner: address {internal}
-candidateOwner: address {internal}
-handshakeKey: string {public}
-signingKey: string {public}
+owner: address {internal}
+candidateOwner: address {internal}
+handshakeKey: string {public}
+signingKey: string {public}
 ```
 
 ### Functions
 
 ```pseudocode
-transferOwnership(newOwner:address): bool {public}
+transferOwnership(newOwner:address): bool {public}
 ```
 
 **Description:**  
@@ -183,3 +183,6 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 
 The specification proposed in this OVIP is not backwards compatible.
 
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbMTQ1NTE3MjgwM119
+-->
