--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -16,7 +16,7 @@ Each Virtual Assets Service Provider (VASP) deploys its own **VASP Contract** th
 
 VASP Contracts are deployed via a universal smart contract factory, the **Index Contract**, which maintains a register of all deployed VASP Contracts.
 
-The Index Contract implements the Addressing Layer as described in [ovip-0009](). There can be multiple implementations of this layer and even multiple istances of the Index Contract. To ensure global uniqueness the **VASP Code Type** specifies for which implementation of the Addressing Layer the VASP Code is registered. The combination of the VASP Code Type and the VASP Code globally, uniquely identify a VASP and is referred to as the **VASP Identifier**
+The Index Contract implements the Addressing Layer as described in [ovip-0009](). There can be multiple implementations of this layer and even multiple istances of the Index Contract. To ensure global uniqueness the **VASP Code Type** specifies for which implementation of the Addressing Layer the VASP Code is registered. The combination of the VASP Code Type and the VASP Code globally, uniquely identify a VASP and is referred to as the **VASP Identifier**.
 
 When a VASP Contract is deployed, the VASP can specify a unique **VASP Code** as an identifier, which can henceforth be used to retrieve the VASP Contract from the Index Contract.
 
@@ -184,5 +184,5 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA2MzM4NTM1MiwxMzUxNjg4OTQ5XX0=
+eyJoaXN0b3J5IjpbNjQwMDcxMzAwLDEzNTE2ODg5NDldfQ==
 -->
