ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -30,6 +30,9 @@ The VASP Code consists of 8 hexadecimal characters and is a unique identifier fo
 
 It can be freely chosen by the VASP out of all possible combinations still available when the VASP Contract is deployed (see sections below).
 
+## VASP Identifier
+
+
 ## Index Contract
 
 The Index Contract serves as a universal smart contract factory and is deployed only once by the OpenVASP Association. It has no owner with special privileges.
@@ -184,5 +187,5 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjQwMDcxMzAwLDEzNTE2ODg5NDldfQ==
+eyJoaXN0b3J5IjpbLTU3NjE3NDQ1LDEzNTE2ODg5NDldfQ==
 -->
