--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -16,8 +16,6 @@ Each Virtual Assets Service Provider (VASP) deploys its own **VASP Contract** th
 
 VASP Contracts are deployed via a universal smart contract factory, the **Index Contract**, which maintains a register of all deployed VASP Contracts.
 
-The Index Contract implements the Addressing Layer as described in [ovip-0009](). There can be multiple implementations of this layer and even multiple istances of the Index Contract. To ensure global uniqueness the **VASP Code Type** specifies for which implementation of the Addressing Layer the VASP Code is registered. The combination of the VASP Code Type and the VASP Code globally, uniquely identify a VASP and is referred to as the **VASP Identifier**.
-
 When a VASP Contract is deployed, the VASP can specify a unique **VASP Code** as an identifier, which can henceforth be used to retrieve the VASP Contract from the Index Contract.
 
 This OVIP specifies the interface of the VASP Contract and the Index Contract, which together set the rules how a VASP can establish its identity within the OpenVASP protocol. It is a revision of the initial specification proposed in the OpenVASP White Paper.
@@ -32,6 +30,11 @@ It can be freely chosen by the VASP out of all possible combinations still avail
 
 ## VASP Identifier
 
+The Index Contract implements the Addressing Layer as described in [ovip-0009](). There can be multiple implementations of this layer and even multiple istances of the Index Contract.
+
+To ensure global uniqueness, the **VASP Code Type** specifies for which implementation of the Addressing Layer the VASP Code is registered (see OVIP-0002).
+
+The combination of the VASP Code Type and the VASP Code globally, uniquely identifies a VASP and is referred to as the **VASP Identifier**.
 
 ## Index Contract
 
@@ -187,5 +190,6 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU3NjE3NDQ1LDEzNTE2ODg5NDldfQ==
+eyJoaXN0b3J5IjpbLTY3NTcwMjQ0NiwtNTc2MTc0NDUsMTM1MT
+Y4ODk0OV19
 -->
