ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -32,7 +32,7 @@ It can be freely chosen by the VASP out of all possible combinations still avail
 
 The Index Contract implements the Addressing Layer as described in [ovip-0009](). There can be multiple implementations of this layer and even multiple istances of the Index Contract.
 
-To ensure global uniqueness, the **VASP Code Type** specifies for which implementation of the Addressing Layer the VASP Code is registered (see OVIP-0002).
+To ensure global uniqueness, the **VASP Code Type** specifies for which implementation of the Addressing Layer the VASP Code is registered (see [ovip-0002]()).
 
 The combination of the VASP Code Type and the VASP Code globally, uniquely identifies a VASP and is referred to as the **VASP Identifier**.
 
@@ -190,6 +190,6 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTY3NTcwMjQ0NiwtNTc2MTc0NDUsMTM1MT
-Y4ODk0OV19
+eyJoaXN0b3J5IjpbNTQ0MTk1MzU1LC01NzYxNzQ0NSwxMzUxNj
+g4OTQ5XX0=
 -->
