ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -78,7 +78,9 @@ Called to get the VASP Code which is uniquely mapped to a given VASP Contract ad
 
 ## VASP Contract
 
-Each VASP participating in the OpenVASP protocol deploys and owns a dedicated VASP Contract. It is used to provide the public keys required to decrypt and verify protocol messages that were signed and sent by the VASP. In addition, the VASP Contract can store pointers to registries, where credentials associated with 
+Each VASP participating in the OpenVASP protocol deploys and owns a dedicated VASP Contract, representing the VASP's identity.
+
+It is used to provide the public keys required to decrypt and verify protocol messages that were signed and sent by the VASP. In addition, the VASP Contract can store pointers to registries, where credentials associated with 
 
 VASP Contracts can only be deployed together with a unique VASP Code and via the Index Contract, which keeps track of all deployed VASP Contracts and their respective VASP Code. Each VASP Contract can always be retrieved from the Index Contract by the associated VASP Code.
 
@@ -190,6 +192,6 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTQ0MTk1MzU1LC01NzYxNzQ0NSwxMzUxNj
-g4OTQ5XX0=
+eyJoaXN0b3J5IjpbLTE1NDgzNTY1MTgsLTU3NjE3NDQ1LDEzNT
+E2ODg5NDldfQ==
 -->
