ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -93,7 +93,7 @@ owner: address {internal}
 candidateOwner: address {internal}
 handshakeKey: string {public}
 signingKey: string {public}
-registries: 
+registries: address[]
 ```
 
 ### Functions
@@ -151,6 +151,19 @@ Function is called by the address that is stored in state variable `owner`.
 **Use Case:**  
 Owner changes the public key required to verify message signatures.
 
+```pseudocode
+setSigningKey(newKey: string)
+```
+
+**Description:**  
+Sets the contract's state variable `signingKey` to `newKey`.
+
+**Conditions:**  
+Function is called by the address that is stored in state variable `owner`.
+
+**Use Case:**  
+Owner changes the public key required to verify message signatures.
+
 # Motivation
 
 - Community feedback -- This OVIP reflects community feedback on the initial VASP Contract specification suggested in the OpenVASP White Paper.
@@ -193,6 +206,6 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEyMjU3MDczNTgsLTU3NjE3NDQ1LDEzNT
-E2ODg5NDldfQ==
+eyJoaXN0b3J5IjpbNzcyMDE4MzYsLTU3NjE3NDQ1LDEzNTE2OD
+g5NDldfQ==
 -->
