ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -152,7 +152,7 @@ Function is called by the address that is stored in state variable `owner`.
 Owner changes the public key required to verify message signatures.
 
 ```pseudocode
-setSigningKey(newKey: string)
+addRegistry(address): bool
 ```
 
 **Description:**  
@@ -206,6 +206,6 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzcyMDE4MzYsLTU3NjE3NDQ1LDEzNTE2OD
-g5NDldfQ==
+eyJoaXN0b3J5IjpbMTkxNjY3NjQwNiwtNTc2MTc0NDUsMTM1MT
+Y4ODk0OV19
 -->
