ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -156,7 +156,7 @@ addRegistry(address): bool
 ```
 
 **Description:**  
-Sets the contract's state variable `signingKey` to `newKey`.
+Adds an address to `newKey`.
 
 **Conditions:**  
 Function is called by the address that is stored in state variable `owner`.
@@ -206,6 +206,6 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxNjY3NjQwNiwtNTc2MTc0NDUsMTM1MT
-Y4ODk0OV19
+eyJoaXN0b3J5IjpbNDI5OTU2NTEwLDE5MTY2NzY0MDYsLTU3Nj
+E3NDQ1LDEzNTE2ODg5NDldfQ==
 -->
