ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -80,7 +80,7 @@ Called to get the VASP Code which is uniquely mapped to a given VASP Contract ad
 
 Each VASP participating in the OpenVASP protocol deploys and owns a dedicated VASP Contract, representing the VASP's identity.
 
-The VASP Contract is used to provide the public keys required to decrypt and verify protocol messages that were signed and sent by the VASP. In addition, the VASP Contract can store pointers to registries, where credentials associated with that VASP Identifier can be found.
+The VASP Contract is used to provide the public keys required to decrypt and verify protocol messages that were signed and sent by the VASP.
 
 VASP Contracts can only be deployed together with a unique VASP Code and via the Index Contract, which keeps track of all deployed VASP Contracts and their respective VASP Code. Each VASP Contract can always be retrieved from the Index Contract by the associated VASP Code.
 
@@ -192,6 +192,7 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYzNjMxNzQ4OSw0Mjk5NTY1MTAsMTkxNj
-Y3NjQwNiwtNTc2MTc0NDUsMTM1MTY4ODk0OV19
+eyJoaXN0b3J5IjpbLTE0ODcyMjEwNjYsLTYzNjMxNzQ4OSw0Mj
+k5NTY1MTAsMTkxNjY3NjQwNiwtNTc2MTc0NDUsMTM1MTY4ODk0
+OV19
 -->
